<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:layout_marginTop="25dp"
        android:id="@+id/insta_user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/insta_image"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/insta_user"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insta_image"
        android:layout_alignLeft="@+id/insta_image"
        android:layout_alignStart="@+id/insta_image"
        android:layout_alignRight="@+id/insta_image"
        android:layout_alignEnd="@+id/insta_image">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_like"
            android:layout_weight=".25"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/like"
            android:id="@+id/insta_likes"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_comments"
            android:layout_weight=".25"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/comment"
            android:id="@+id/insta_comments"
            android:gravity="center_vertical"/>

        </LinearLayout>

</RelativeLayout>